[project]
name = "blockcheck"
version = "0.1.0"
description = "A Python package to check Bitcoin address balances using Blockchain.info API"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [{ name = "randyungaro", email = "xrandyungarox@gmail.com" }]
dependencies = []

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"